# latent-landmarks

./: README.md  a1.py  pyproject.toml
latent_landmarks/: unitree_a1.py
latent_landmarks/envs/: __init__.py  create_goal_env.py  goal_unitree_a1.py  unitree_a1.py
rl/: launcher_latent.py  logger.py  main_latent.py
rl/agent/: core.py
rl/algo/: core.py  latent_planner.py
rl/learn/: latent_planner.py
rl/utils/vec_env/: dummy_vec_env.py  subproc_vec_env.py  vec_frame_stack.py
tests/: test_a1_env.py  test_goal_a1_env.py
